Bug#43940 64-bit windows myisamchk doesn't support key_buffer_size > 4G The fix is to allow myisamchk to use >4G key_buffer_size on win64